Passing key passwords through env vars and related things (#31)
* Passing key passwords through env vars and related things

* Validating paths to be inside OB_CERTS_DIR

* Removed tls.key_password
